@@ -253,26 +253,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Register protobuf generated sources so IDEs (VS Code JDT LS / Eclipse m2e) resolve them -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.6.0</version>
-                <executions>
-                    <execution>
-                        <id>add-protobuf-generated-sources</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${project.build.directory}/generated-sources/protobuf</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -296,21 +276,6 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <source>25</source>
-                    <target>25</target>
-                    <!-- Make sure JDK modules used by tests (and any main code) are on the module graph during compilation -->
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>java.net.http,java.logging</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-
             <!-- Create executable JAR with all dependencies -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
